--- a/style.css
+++ b/style.css
@@ -174,18 +174,20 @@ box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1),
   grid-template-columns: repeat(3,1fr);
   gap:1.5rem;
   margin-top: 3rem;
+  margin-left: 5rem;
 
 }
 
 .boxs{
 box-shadow: 0px 0px  6px   rgba(0,0,0,0.8);
-width: 350px;
-height: 100px;
+ width: 350px;
+height: 100px; 
 padding: 10px 20px;
 border: 1px solid #d268cc;
 display: flex;
 gap: 1rem;
 flex-direction: column;
+
 
 p{
   text-align: center;
@@ -204,7 +206,7 @@ p{
   justify-content: center;
   align-items: center;
   
-  margin-right: 2rem;
+
 
 }
 
@@ -223,8 +225,213 @@ p{
   justify-content: center;
   align-items: center;
   margin-top:5rem ;
-  margin-right: 2rem;
+ 
    font-size: 2.5rem;
   font-weight: 600;
 
+}
+.addnew{
+  display: flex;
+  justify-content: center;
+   max-width: 1110px;
+  margin-inline:auto;
+  width:800px;
+  margin-top:8rem;
+  position:relative;
+  left:15rem
+
+}
+
+.newstudnts{
+  width: 250px;
+  height: 220px;
+  box-shadow: 0px 8px 9px rgba(0,0,0,0.1);
+  padding: 10px 20px;
+  position: relative;
+ margin:  16rem auto ;
+ 
+
+ 
+}
+.newstudnts input{
+  width: 100%;;
+  padding: 6px 20px;
+  border: none;
+  border-radius: 5px;
+  margin-top: 1rem;
+ 
+  outline:none;
+  font-size:1rem;
+font-weight: 600px;
+color: #333;
+background-color: #f0f0f0;
+transition: all 0.3s ease;
+}
+.newstudnts input:focus{
+  border:2px solid #d268cc;
+  background-color: #fff;
+
+}
+.btns{
+  padding: 10px 20px;
+ border:none;
+ border-radius: 10px;
+ background-color: #d268cc;
+ color:white;
+ font-size: 1rem;
+ transition: all 0.3 ease;
+ margin-top: 1rem;
+ text-align: center;
+ display: flex;
+ justify-self: center;
+
+
+
+
+}
+
+
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  .modal-content {
+    position: relative;
+    margin: 2% auto;
+    width: 80%;
+    max-width: 800px;
+    
+  }
+    #close-modal {
+    position: absolute;
+    top: -29px;
+    right: 23%;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    background-color: #000;
+    border-radius: 50%;
+    padding: 0 10px;
+    cursor: pointer;
+  }
+  
+  .student-table{
+    margin:2.5rem auto 
+  }
+  .heder {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+   
+  }
+
+
+  .delete{
+    background-color: red;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+  }
+  .delete:hover{
+    background-color: #d268cc;
+    transition: all 0.3s ease;
+  }
+  .update{
+    background-color: green;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+  }
+  .update:hover{
+    background-color: #d268cc;
+    transition: all 0.3s ease;
+  }
+
+
+  
+.ToastBox{
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 20px;
+}
+.toast{
+    width: 400px;
+    height: 80px;
+    background: #fff;
+    font-weight: 500;
+    margin: 15px 0;
+    box-shadow: 0 0 20px rgba(0,0,0,0.3);
+    display: flex;
+    align-items: center;
+    position: relative;
+    transform: translateX(100%);
+    animation: moveleft 0.5s linear forwards;
+
+
+}
+
+@keyframes moveleft {
+    100%{
+        transform: translateX(0%);
+    }
+    
+}
+
+.toast i{
+    margin: 0 20px;
+    font-size: 35px;
+    color: green;
+}
+.updated i{
+    color: green;
+}
+
+.invalid i{
+    color: orange;
+    z-index: 20000;
+}
+.error i{
+    color: red;
+}
+.toast::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    top:0;
+    width: 100%;
+    height: 6px;
+    background: green;
+    animation: animate 3s linear forwards;
+
+}
+
+@keyframes animate {
+    100%{
+        width: 0%;
+    }
+    
+}
+
+
+.error::after{
+    background: red;
+}
+.invalid::after{
+    background-color: orange;
 }
