--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     width: 350px;
     border-radius: 5px;
     height: 150px;
-    margin-top: 10rem;
+  
 }
 #forminput input{
     padding: 10px 20px;
@@ -83,16 +83,16 @@
     flex-direction: column;
     padding: 15px 25px;
     margin-top: 3rem;
-    color: red;
+  
+
+}
+.containe{
+  color: red;
     font-size: 1.5rem;
     font-weight: 600;
     text-align: center;
-
-    
    
-
-
-
+    margin: 3rem auto;
 }
 
 
